<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.admin.schoolappcentral.UserSelectionActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/ImageSwitcher01"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:background="@drawable/logo">
        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EE454545"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/head_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/txt_wmi"
                android:textSize="25dp"
                android:textColor="@android:color/white"
                android:gravity="center" />

            <TextView
                android:id="@+id/btn_user_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect3"
                android:text="@string/txt_parent"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="11dp"
                android:elevation="3dp" />

            <TextView
                android:id="@+id/btn_user_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect3"
                android:text="@string/txt_student"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="11dp"
                android:elevation="3dp" />

            <TextView
                android:id="@+id/btn_user_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect3"
                android:text="@string/txt_guest"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="11dp"
                android:elevation="3dp" />
        </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
