<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context="app.admin.schoolappcentral.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ImageSwitcher01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/logo"></ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/FragmentBackground"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/layout_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/primary"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/txt_notification_title"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/notfication_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>

                    <LinearLayout
                        android:id="@+id/notificationpanel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>


                    <TextView
                        android:id="@+id/nonotifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/nodata_message_inbox"
                        android:textColor="@color/secondary_text"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/primary"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/txt_event_title"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/eventspanel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/events_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/nolatestevents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/nodata_event"
                        android:textColor="@color/secondary_text"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <com.andexert.library.RippleView
                    android:id="@+id/call"
                    rv_centered="true"
                    rv_color="@color/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/btn_call"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rect2"
                        android:padding="10dp"
                        android:src="@drawable/phonevolume" />

                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    android:id="@+id/web"
                    rv_centered="true"
                    rv_color="@color/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <ImageView
                        android:id="@+id/btn_web"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rect2"
                        android:padding="10dp"
                        android:src="@drawable/webnew" />
                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    android:id="@+id/facebook"
                    rv_centered="true"
                    rv_color="@color/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <ImageView
                        android:id="@+id/btn_facebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rect2"
                        android:padding="10dp"
                        android:src="@drawable/ic_menu_facebook_lite" />

                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    android:id="@+id/twitter"
                    rv_centered="true"
                    rv_color="@color/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <ImageView
                        android:id="@+id/btn_twitter"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rect2"
                        android:padding="10dp"
                        android:src="@drawable/ic_menu_twitter_lite" />

                </com.andexert.library.RippleView>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>